// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalEditModal /> should render correctly with DELETED status 1`] = `
<ProposalEditModal__ModalProposalEditContainer
  animation={false}
  aria-labelledby="contained-modal-title-lg"
  bsSize="large"
  dialogClassName="custom-modal-dialog"
  onHide={[Function]}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
      id="contained-modal-title-lg"
    >
      <b>
        <FormattedMessage
          id="global.edit"
          values={Object {}}
        />
      </b>
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <Relay(ProposalDraftAlert)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "allRevisions": Object {
            "edges": Array [],
            "totalCount": 0,
          },
          "form": Object {
            "$fragmentRefs": null,
            "contribuable": true,
          },
          "id": "1",
          "publicationStatus": "DELETED",
        }
      }
    />
    <Relay(Connect(injectIntl(ReduxForm)))
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "allRevisions": Object {
            "edges": Array [],
            "totalCount": 0,
          },
          "form": Object {
            "$fragmentRefs": null,
            "contribuable": true,
          },
          "id": "1",
          "publicationStatus": "DELETED",
        }
      }
      proposalForm={
        Object {
          "$fragmentRefs": null,
          "contribuable": true,
        }
      }
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <CloseButton
      label="global.cancel"
      onClose={[Function]}
    />
    <Connect(SubmitButton)
      disabled={false}
      id="confirm-proposal-edit"
      isSubmitting={false}
      label="global.submit"
      onSubmit={[Function]}
    />
  </ModalFooter>
</ProposalEditModal__ModalProposalEditContainer>
`;

exports[`<ProposalEditModal /> should render correctly with DRAFT status 1`] = `
<ProposalEditModal__ModalProposalEditContainer
  animation={false}
  aria-labelledby="contained-modal-title-lg"
  bsSize="large"
  dialogClassName="custom-modal-dialog"
  onHide={[Function]}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
      id="contained-modal-title-lg"
    >
      <b>
        <FormattedMessage
          id="global.edit"
          values={Object {}}
        />
      </b>
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <Relay(ProposalDraftAlert)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "allRevisions": Object {
            "edges": Array [],
            "totalCount": 0,
          },
          "form": Object {
            "$fragmentRefs": null,
            "contribuable": true,
          },
          "id": "1",
          "publicationStatus": "DRAFT",
        }
      }
    />
    <Relay(Connect(injectIntl(ReduxForm)))
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "allRevisions": Object {
            "edges": Array [],
            "totalCount": 0,
          },
          "form": Object {
            "$fragmentRefs": null,
            "contribuable": true,
          },
          "id": "1",
          "publicationStatus": "DRAFT",
        }
      }
      proposalForm={
        Object {
          "$fragmentRefs": null,
          "contribuable": true,
        }
      }
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <CloseButton
      label="global.cancel"
      onClose={[Function]}
    />
    <Connect(SubmitButton)
      disabled={true}
      id="confirm-proposal-create-as-draft"
      isSubmitting={false}
      label="global.save_as_draft"
      onSubmit={[Function]}
    />
    <Connect(SubmitButton)
      disabled={false}
      id="confirm-proposal-edit"
      isSubmitting={false}
      label="global.submit"
      onSubmit={[Function]}
    />
  </ModalFooter>
</ProposalEditModal__ModalProposalEditContainer>
`;

exports[`<ProposalEditModal /> should render correctly with PUBLISHED status 1`] = `
<ProposalEditModal__ModalProposalEditContainer
  animation={false}
  aria-labelledby="contained-modal-title-lg"
  bsSize="large"
  dialogClassName="custom-modal-dialog"
  onHide={[Function]}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
      id="contained-modal-title-lg"
    >
      <b>
        <FormattedMessage
          id="global.edit"
          values={Object {}}
        />
      </b>
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <Relay(ProposalDraftAlert)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "allRevisions": Object {
            "edges": Array [],
            "totalCount": 0,
          },
          "form": Object {
            "$fragmentRefs": null,
            "contribuable": true,
          },
          "id": "1",
          "publicationStatus": "PUBLISHED",
        }
      }
    />
    <Relay(Connect(injectIntl(ReduxForm)))
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "allRevisions": Object {
            "edges": Array [],
            "totalCount": 0,
          },
          "form": Object {
            "$fragmentRefs": null,
            "contribuable": true,
          },
          "id": "1",
          "publicationStatus": "PUBLISHED",
        }
      }
      proposalForm={
        Object {
          "$fragmentRefs": null,
          "contribuable": true,
        }
      }
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <CloseButton
      label="global.cancel"
      onClose={[Function]}
    />
    <Connect(SubmitButton)
      disabled={false}
      id="confirm-proposal-edit"
      isSubmitting={false}
      label="global.submit"
      onSubmit={[Function]}
    />
  </ModalFooter>
</ProposalEditModal__ModalProposalEditContainer>
`;

exports[`<ProposalEditModal /> should render correctly with TRASHED status 1`] = `
<ProposalEditModal__ModalProposalEditContainer
  animation={false}
  aria-labelledby="contained-modal-title-lg"
  bsSize="large"
  dialogClassName="custom-modal-dialog"
  onHide={[Function]}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
      id="contained-modal-title-lg"
    >
      <b>
        <FormattedMessage
          id="global.edit"
          values={Object {}}
        />
      </b>
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <Relay(ProposalDraftAlert)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "allRevisions": Object {
            "edges": Array [],
            "totalCount": 0,
          },
          "form": Object {
            "$fragmentRefs": null,
            "contribuable": true,
          },
          "id": "1",
          "publicationStatus": "TRASHED",
        }
      }
    />
    <Relay(Connect(injectIntl(ReduxForm)))
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "allRevisions": Object {
            "edges": Array [],
            "totalCount": 0,
          },
          "form": Object {
            "$fragmentRefs": null,
            "contribuable": true,
          },
          "id": "1",
          "publicationStatus": "TRASHED",
        }
      }
      proposalForm={
        Object {
          "$fragmentRefs": null,
          "contribuable": true,
        }
      }
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <CloseButton
      label="global.cancel"
      onClose={[Function]}
    />
    <Connect(SubmitButton)
      disabled={false}
      id="confirm-proposal-edit"
      isSubmitting={false}
      label="global.submit"
      onSubmit={[Function]}
    />
  </ModalFooter>
</ProposalEditModal__ModalProposalEditContainer>
`;

exports[`<ProposalEditModal /> should render correctly with TRASHED_NOT_VISIBLE status 1`] = `
<ProposalEditModal__ModalProposalEditContainer
  animation={false}
  aria-labelledby="contained-modal-title-lg"
  bsSize="large"
  dialogClassName="custom-modal-dialog"
  onHide={[Function]}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
      id="contained-modal-title-lg"
    >
      <b>
        <FormattedMessage
          id="global.edit"
          values={Object {}}
        />
      </b>
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <Relay(ProposalDraftAlert)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "allRevisions": Object {
            "edges": Array [],
            "totalCount": 0,
          },
          "form": Object {
            "$fragmentRefs": null,
            "contribuable": true,
          },
          "id": "1",
          "publicationStatus": "TRASHED_NOT_VISIBLE",
        }
      }
    />
    <Relay(Connect(injectIntl(ReduxForm)))
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "allRevisions": Object {
            "edges": Array [],
            "totalCount": 0,
          },
          "form": Object {
            "$fragmentRefs": null,
            "contribuable": true,
          },
          "id": "1",
          "publicationStatus": "TRASHED_NOT_VISIBLE",
        }
      }
      proposalForm={
        Object {
          "$fragmentRefs": null,
          "contribuable": true,
        }
      }
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <CloseButton
      label="global.cancel"
      onClose={[Function]}
    />
    <Connect(SubmitButton)
      disabled={false}
      id="confirm-proposal-edit"
      isSubmitting={false}
      label="global.submit"
      onSubmit={[Function]}
    />
  </ModalFooter>
</ProposalEditModal__ModalProposalEditContainer>
`;

exports[`<ProposalEditModal /> should render correctly with UNPUBLISHED status 1`] = `
<ProposalEditModal__ModalProposalEditContainer
  animation={false}
  aria-labelledby="contained-modal-title-lg"
  bsSize="large"
  dialogClassName="custom-modal-dialog"
  onHide={[Function]}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
      id="contained-modal-title-lg"
    >
      <b>
        <FormattedMessage
          id="global.edit"
          values={Object {}}
        />
      </b>
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <Relay(ProposalDraftAlert)
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "allRevisions": Object {
            "edges": Array [],
            "totalCount": 0,
          },
          "form": Object {
            "$fragmentRefs": null,
            "contribuable": true,
          },
          "id": "1",
          "publicationStatus": "UNPUBLISHED",
        }
      }
    />
    <Relay(Connect(injectIntl(ReduxForm)))
      proposal={
        Object {
          "$fragmentRefs": null,
          "$refType": null,
          "allRevisions": Object {
            "edges": Array [],
            "totalCount": 0,
          },
          "form": Object {
            "$fragmentRefs": null,
            "contribuable": true,
          },
          "id": "1",
          "publicationStatus": "UNPUBLISHED",
        }
      }
      proposalForm={
        Object {
          "$fragmentRefs": null,
          "contribuable": true,
        }
      }
    />
  </ModalBody>
  <ModalFooter
    bsClass="modal-footer"
    componentClass="div"
  >
    <CloseButton
      label="global.cancel"
      onClose={[Function]}
    />
    <Connect(SubmitButton)
      disabled={false}
      id="confirm-proposal-edit"
      isSubmitting={false}
      label="global.submit"
      onSubmit={[Function]}
    />
  </ModalFooter>
</ProposalEditModal__ModalProposalEditContainer>
`;
